			   XPCE ChangeLog
			   ==============

* FIXED: Editor: bind C-j to newline_and_indent as well as LFD, as these
  sequences send different commands since a while.  Used to work nevertheless
  in PceEmacs because `fundamental_mode->typed' was defined to accept
  event_id rather then event.

* FIXED: Improve keyboard input handling in X11 version when using transient
  windows.  Opening a modal window now gives this window the input focus
  regardless of what the window manager wants.

* ADDED: implements/3 from library(pce_meta): allow for variable method
  name.  This library now handles not-yet-realised classes fully dynamic.

* ADDED: `editor->auto_fill', doing the fill-part of ->insert_self_fill,
  so filling can easily be specialised in subclasses.

* ADDED: emacs_language_mode->fill_comment_paragraph to fill/justify
  regions commented using the line-comment character.
  `emacs_prolog_mode->fill_paragraph' now dynamically distinguishes
  between ->indent_clause, ->fill_comment_paragraph or normal
  ->fill_paragraph.

* MODIFIED: `text_buffer<-scan_syntax' to return a tuple containing the
  syntax category with the location where this syntactical entity started.
  Also documented the method.  Being previously undocumented and pretty
  obscure we don't anticipate public usage.

* FIXED: PceEmacs Prolog mode: avoid endless loop in indent_clause on a
  fact near the end of the file.

* ADDED: library(pce_image_browser): deduce name through method, allowing
  to override in subclass.

* COMPATIBILITY: PceEmacs look-and-feel synchronisation to GNU-Emacs
	- Fix Control-j (new_line_and_indent)
	- Make prompters return immediately if typed value is unique
	- `editor->fill_paragraph' justifies if argument is specified
	- Make Control-x b (switch_to_buffer) use last buffer as default. 
	- Add Control-h k (describe_key) and Control-h f (describe_function)


VERSION 6.0.1, distributed with SWI-Prolog 5.0.1
================================================
